Correcting 'social Icons not showing' Bug

--- a/css/style.css
+++ b/css/style.css
@@ -584,75 +584,29 @@ p {
 /* Footer Section */
 .footer {
     width: 100%;
-    height: 15vh;
+    height: 20vh;
     background-color: var(--primary-light);
+    box-sizing: border-box;
 }
 
-
-.wrapper .button{
-  display: inline-block;
-  height: 60px;
-  width: 60px;
-  float: left;
-  margin: 0 5px;
-  overflow: hidden;
-  background: var(--body-color);
-  border-radius: 50px;
-  cursor: pointer;
-  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
-  transition: all 0.3s ease-out;
+.footer img {
+    width: 40px;
+	border-radius: 12px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
-.wrapper .button:hover{
-  width: 200px;
+.footer img:hover {
+    width: 50px;
+    border: 2.5px solid var(--primary-color);
+    transition: 0.5s;
 }
-.wrapper .button .icon{
-  display: inline-block;
-  height: 60px;
-  width: 60px;
-  text-align: center;
-  border-radius: 50px;
-  box-sizing: border-box;
-  line-height: 10px;
-  transition: all 0.3s ease-out;
-  border: 2px solid var(--body-color);
-
+.column {
+	float: left;
+	width: 33.33%;
+	padding: 5px;
 }
-.wrapper .button:nth-child(1):hover .icon{
-  background: #5e63b6;
-}
-.wrapper .button:nth-child(2):hover .icon{
-  background: #E1306C;
-}
-.wrapper .button:nth-child(3):hover .icon{
-  background: #005691;
-}
-.wrapper .button:nth-child(4):hover .icon{
-  background: #ff0000;
-}
-.wrapper .button .icon i{
-  font-size: 25px;
-  line-height: 60px;
-  transition: all 0.3s ease-out;
-}
-.wrapper .button:hover .icon i{
-  color: #fff;
-}
-.wrapper .button span{
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 60px;
-  margin-left: 10px;
-  transition: all 0.3s ease-out;
-}
-.wrapper .button:nth-child(1) span{
-  color: #5e63b6;
-}
-.wrapper .button:nth-child(2) span{
-  color: #E1306C;
-}
-.wrapper .button:nth-child(3) span{
-  color: #005691;
-}
-.wrapper .button:nth-child(4) span{
-  color: #ff0000;
+.row::after {
+	content: "";
+	display: table;
+	clear: both;
 }
